--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -10,26 +10,28 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Checkout
+      - name: Checkout scalatra-website
         uses: actions/checkout@v2
         with:
           repository: scalatra/scalatra-website
           path: scalatra-website
-      - name: Checkout
+      - name: Checkout scalatra
         uses: actions/checkout@v2
         with:
           repository: scalatra/scalatra
           path: scalatra
-      - name: Checkout
+          fetch-depth: 0
+      - name: Checkout scatra-docbuild
         uses: actions/checkout@v2
         with:
           repository: scalatra/scalatra-docbuild
           path: scalatra-docbuild
+          fetch-depth: 0
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: 11     
-      - name: before_install
+      - name: Install Hugo
         run: |
           wget https://github.com/gohugoio/hugo/releases/download/v0.19/hugo_0.19-64bit.deb
           sudo dpkg -i hugo_0.19-64bit.deb
